style.css
/* Added fonts close to the provided mockups */
@font-face {
    font-family: "Ubundu Regular";
    src: url(./fonts/UbuntuMono-Regular.ttf);
}

@font-face {
    font-family: "Roboto Regular";
    src: url(./fonts/Roboto-Regular.ttf);
}

@font-face {
    font-family: "Roboto Italic";
    src: url(./fonts/Roboto-Italic.ttf);
}

/* Mobile Specific CSS */
@media only screen and (max-width: 376px) {
    .container {
        display: grid;
        grid-template-columns: 1fr;
        margin: 0;
        grid-template-rows: .2fr .5fr 3fr .3fr;
        justify-items: center;
        justify-content: center;    
        grid-template-areas: 
          "header"
          "sidebar"
          "main"
          "footer";
    }

    header {
        color: #FFFFFF;
        background-color: #333333;
    }

    aside button {
        display: inline-block;
        width: 100px;
        margin: 10px auto 10px auto;
    }

    main {
        display: grid;
        width: 88%;
        grid-template-columns: 1fr;
        grid-template-rows: repeat(9, 1fr);
        row-gap: 6px;
    }

    .item {
        color: #000000;
        font-size: 1.3rem;
        background-color: #EFEFEF;
        height: 45px;
    }

    .item-1, .item-8 {
        border-left: 10px solid #6F98A8;
    }
    
    .item-2, .item-4 {
        border-left: 10px solid #2B8EAD;
    }
    
    .item-6, .item-7 {
        border-left: 10px solid #BFBFBF;
    }
    
    .item-3, .item-5, .item-9 {
        border-left: 10px solid #2F454E;
    }

    footer {
        margin-top: 25px;
    }
}

/* Desktop Specific CSS */
@media only screen and (min-width: 376px) {
    .container {
        display: grid;
        max-width: 960px;
        margin: 25px auto 0 auto;
        grid-template-columns: 1fr 1fr 1fr 1fr;
        grid-template-rows: auto;
        justify-items: center;
        justify-content: center;    
        grid-template-areas: 
          "header header header header"
          "main  main main sidebar"
          "footer footer footer footer";
    }

    header {
        color: #000000;
    }

    aside {
        border-top: 5px solid #BFBFBF;
        background-color: #EFEFEF;
    }

    aside button {
        display: block;
        width: 80%;
        margin: 25px auto 25px auto;
    }

    main {
        border-top: 5px solid #BFBFBF;
        display: grid;
        width: 100%;
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-rows: auto;
    }

    .item {    
        font-size: 6rem;
        aspect-ratio: 1;
        color: #FFFFFF;
    }

    .item-1, .item-8 {
        background-color: #6F98A8;
    }
    
    .item-2, .item-4 {
        background-color: #2B8EAD;
    }
    
    .item-6, .item-7 {
        background-color: #BFBFBF;
    }
    
    .item-3, .item-5, .item-9 {
        background-color: #2F454E;
    }

    footer {
        background-color: #EFEFEF;
        padding-top: 15px;
        height: 75px;
    }
}

/* Added fonts close to the provided mockups */
header {
    font-family: "Roboto Regular";
    grid-area: header;
    width: 100%;
    line-height: 50px;    
    font-size: 1.4rem;
    text-align: center;
}

main {
    grid-area: main;
}

.item {
    font-family: "Ubundu Regular";
    justify-self: stretch;
    display: flex;
    justify-content: center;
    align-items: center;
}

aside {
    grid-area: sidebar;    
    justify-self: stretch;
    text-align: center;
}

aside button {
    cursor: pointer;
    background-color: #72C3DC;
    color: #FFFFFF;
    border: none;
    border-bottom: 5px solid #2B8EAD;
    border-radius: 10px;
    height: 45px;
}

aside button:hover {
    background-color: #79cee7;
}

aside button:active {
    border-bottom: 3px solid #2B8EAD;
}

footer {
    font-family: "Roboto Italic";
    color: #000000;
    grid-area: footer;
    font-size: .9rem;
    justify-self: stretch;
    text-align: center;
}

